--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -36,42 +36,55 @@
         <div class="collapse navbar-collapse" id="navMenu">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
 
-                <li class="nav-item">
-                    <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'home' %}">Home</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link {% if request.path|slice:':8' == '/spaces/' %}active{% endif %}" href="{% url 'space_list' %}">Spaces</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link {% if request.path|slice:':7' == '/buses/' %}active{% endif %}" href="{% url 'bus_list' %}">Transport</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link {% if request.path|slice:':10' == '/calendar/' %}active{% endif %}" href="{% url 'calendar' %}">Calendar</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link {% if request.path|slice:':13' == '/my-bookings/' %}active{% endif %}" href="{% url 'my_bookings' %}">My Bookings</a>
-                </li>
-
                 {% if user.is_authenticated %}
                     
-                    {% if user.is_staff %}
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.path|slice:':17' == '/admin/dashboard/' %}active{% endif %}"
-                           href="{% url 'admin_dashboard' %}">
-                            Dashboard
-                        </a>
-                    </li>
+                    {% with user_groups=user.groups.all|join:"," %}
                     
-                    <li class="nav-item">
-                        <a class="nav-link text-warning fw-semibold" href="{% url 'upload_timetable' %}">
-                            Timetable
-                        </a>
-                    </li>
+                    {% if "Transport" in user_groups %}
+                        <li class="nav-item">
+                            <a class="nav-link active fw-bold text-warning" href="{% url 'bus_list' %}">
+                                Transport Dashboard
+                            </a>
+                        </li>
+
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="{% url 'home' %}">Home</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path|slice:':8' == '/spaces/' %}active{% endif %}" href="{% url 'space_list' %}">Spaces</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path|slice:':7' == '/buses/' %}active{% endif %}" href="{% url 'bus_list' %}">Transport</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path|slice:':10' == '/calendar/' %}active{% endif %}" href="{% url 'calendar' %}">Calendar</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path|slice:':13' == '/my-bookings/' %}active{% endif %}" href="{% url 'my_bookings' %}">My Bookings</a>
+                        </li>
+
+                        {% if user.is_staff %}
+                        <li class="nav-item">
+                            <a class="nav-link {% if request.path|slice:':17' == '/admin/dashboard/' %}active{% endif %}"
+                               href="{% url 'admin_dashboard' %}">
+                                Dashboard
+                            </a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link text-warning fw-semibold" href="{% url 'upload_timetable' %}">
+                                Timetable
+                            </a>
+                        </li>
+                        {% endif %}
+
                     {% endif %}
+                    {% endwith %}
 
                     <li class="nav-item dropdown mx-2">
                         <a class="nav-link position-relative text-white" href="#" id="notifDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -156,9 +169,7 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
 <script src="{% static 'js/booking.js' %}"></script>
 
 </body>
