Fixed Timetable and Bus Booking Bugs

--- a/core/templates/book_bus.html
+++ b/core/templates/book_bus.html
@@ -45,11 +45,23 @@
                         </div>
                     </div>
 
-                    <div class="mb-4">
-                        <label class="label-material">Destination</label>
-                        <div class="modern-input-group">
-                            <i class="bi bi-geo-alt-fill modern-input-icon"></i>
-                            <input type="text" name="destination" placeholder="e.g. Infopark, Kakkanad" required>
+                    <div class="section-divider"></div>
+
+                    <div class="row g-4 mb-4">
+                        <div class="col-md-6">
+                            <label class="label-material">Pickup Location</label>
+                            <div class="modern-input-group">
+                                <i class="bi bi-geo-alt modern-input-icon"></i>
+                                <input type="text" name="origin" placeholder="e.g. Main Block" required>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <label class="label-material">Destination</label>
+                            <div class="modern-input-group">
+                                <i class="bi bi-geo-alt-fill modern-input-icon"></i>
+                                <input type="text" name="destination" placeholder="e.g. Infopark" required>
+                            </div>
                         </div>
                     </div>
 
